--- a/_site.yml
+++ b/_site.yml
@@ -12,6 +12,6 @@ navbar:
     - icon: fa-linkedin fa-lg
       href: https://www.linkedin.com/in/gswliu/
     - icon: fa-glasses fa-lg
-      href: https://gswliu.github.io/LiuGrace_CV_Sep2018.pdf
+      href: LiuGrace_CV_Sep2018.pdf
 output:
   html_document
